--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
-    <script src="https://raw.githubusercontent.com/shutu0930/my_portfolio/master/resources/js/script.js" type="text/javascript"></script>
+    <script src="https://rawgit.com/shutu0930/my_portfolio/gh-pages/resources/js/script.js"></script>
     <script src="https://raw.githubusercontent.com/shutu0930/my_portfolio/master/vendors/js/jquery.waypoints.min.js" type="text/javascript"></script>
     
     </body>
